--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -316,7 +316,7 @@ button.toggle-button {
 }
 .site-title {
   font-size: 1.625em; /* 26px */
-  line-height: 1.08;
+  line-height: 48px;
   text-transform: uppercase;
   text-shadow: -0.077em 0.077em $gray-darkest;
 
